GH and VSCode updates

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,4 +49,4 @@ jobs:
         
     - name: Test with unittest
       run: |
-        python3 -m unittest discover -s "tests"
+        python3 -m unittest discover -s "tst"
