--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
-astroid==2.12.13
-attrs==22.2.0
-dill==0.3.6
-flake8==6.0.0
-flake8-mypy==17.8.0
-isort==5.11.4
-lazy-object-proxy==1.8.0
+astroid==3.0.2
+coverage==7.4.0
+dill==0.3.7
+flake8==6.1.0
+isort==5.13.2
 mccabe==0.7.0
-mypy==0.991
-mypy-extensions==0.4.3
-platformdirs==2.6.2
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pylint==2.15.9
+mypy==1.8.0
+mypy-extensions==1.0.0
+platformdirs==4.1.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
+pylint==3.0.3
 tomli==2.0.1
-tomlkit==0.11.6
-typing-extensions==4.4.0
-wrapt==1.14.1
+tomlkit==0.12.3
+typing_extensions==4.9.0
