Removed depricated settings from launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,12 +10,7 @@
             "program": "${file}",
             "cwd": "${workspaceRoot}",
             "env": {},
-            "envFile": "${workspaceRoot}/.venv",
-            "debugOptions": [
-                "WaitOnAbnormalExit",
-                "WaitOnNormalExit",
-                "RedirectOutput"
-            ]
+            "envFile": "${workspaceRoot}/.venv"
         }
     ]
 }
